shared/src/main/scala/vyxal/antlr/VyxalParser.java
// Generated from .\shared\src\main\antlr\VyxalParser.g4 by ANTLR 4.10.1
package vyxal;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VyxalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PREFIX=1, CONTEXT_VAR=2, ALIAS=3, MODIFIER=4, COMMENT=5, DIGIT=6, MINUS=7, 
		ALPHA=8, WHITESPACE=9, ASSN_SIGN=10, LAMBDA_TYPE=11, NORMAL_STRING=12, 
		COMPRESSED_STRING=13, SINGLE_CHAR_STRING=14, DOUBLE_CHAR_STRING=15, PIPE=16, 
		WHILE_OPEN=17, WHILE_CLOSE=18, IF_OPEN=19, IF_CLOSE=20, FOR_OPEN=21, FOR_CLOSE=22, 
		LIST_OPEN=23, LIST_CLOSE=24, PERIOD=25, SEMICOLON=26, AT_SIGN=27, STAR=28, 
		COLON=29, COMPRESSED_NUMBER=30, COMPLEX_SEPARATOR=31, ONE_ELEMENT_LAMBDA=32, 
		TWO_ELEMENT_LAMBDA=33, THREE_ELEMENT_LAMBDA=34, LITERALLY_ANY_TEXT=35;
	public static final int
		RULE_file = 0, RULE_alias = 1, RULE_program = 2, RULE_program_node = 3, 
		RULE_literal = 4, RULE_string = 5, RULE_number = 6, RULE_integer = 7, 
		RULE_compressed_number = 8, RULE_complex_number = 9, RULE_list = 10, RULE_statement = 11, 
		RULE_if_statement = 12, RULE_fori_loop = 13, RULE_for_loop = 14, RULE_while_loop = 15, 
		RULE_lambda = 16, RULE_one_element_lambda = 17, RULE_two_element_lambda = 18, 
		RULE_three_element_lambda = 19, RULE_variable_assn = 20, RULE_variable = 21, 
		RULE_modifier = 22, RULE_element = 23, RULE_element_type = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "alias", "program", "program_node", "literal", "string", "number", 
			"integer", "compressed_number", "complex_number", "list", "statement", 
			"if_statement", "fori_loop", "for_loop", "while_loop", "lambda", "one_element_lambda", 
			"two_element_lambda", "three_element_lambda", "variable_assn", "variable", 
			"modifier", "element", "element_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'n'", "'\\u00A2'", null, null, null, "'-'", null, null, 
			null, null, null, null, null, null, "'|'", "'{'", "'}'", "'['", "']'", 
			"'('", "')'", "'\\u27E8'", "'\\u27E9'", "'.'", "';'", "'@'", "'*'", "':'", 
			"'\\u00BB'", "'\\u00B0'", "'\\u207D'", "'\\u2021'", "'\\u226C'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PREFIX", "CONTEXT_VAR", "ALIAS", "MODIFIER", "COMMENT", "DIGIT", 
			"MINUS", "ALPHA", "WHITESPACE", "ASSN_SIGN", "LAMBDA_TYPE", "NORMAL_STRING", 
			"COMPRESSED_STRING", "SINGLE_CHAR_STRING", "DOUBLE_CHAR_STRING", "PIPE", 
			"WHILE_OPEN", "WHILE_CLOSE", "IF_OPEN", "IF_CLOSE", "FOR_OPEN", "FOR_CLOSE", 
			"LIST_OPEN", "LIST_CLOSE", "PERIOD", "SEMICOLON", "AT_SIGN", "STAR", 
			"COLON", "COMPRESSED_NUMBER", "COMPLEX_SEPARATOR", "ONE_ELEMENT_LAMBDA", 
			"TWO_ELEMENT_LAMBDA", "THREE_ELEMENT_LAMBDA", "LITERALLY_ANY_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VyxalParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	boolean isAlias = false;

	public VyxalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(VyxalParser.EOF, 0); }
		public List<AliasContext> alias() {
			return getRuleContexts(AliasContext.class);
		}
		public AliasContext alias(int i) {
			return getRuleContext(AliasContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			isAlias = true;
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(51);
					alias();
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			isAlias = false;
			setState(58);
			program();
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasContext extends ParserRuleContext {
		public ElementContext theAlias;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode ALIAS() { return getToken(VyxalParser.ALIAS, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(VyxalParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(VyxalParser.WHITESPACE, i);
		}
		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitAlias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AliasContext alias() throws RecognitionException {
		AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_alias);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			program();
			setState(62);
			match(ALIAS);
			setState(63);
			((AliasContext)_localctx).theAlias = element();
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(64);
					match(WHITESPACE);
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Program_nodeContext> program_node() {
			return getRuleContexts(Program_nodeContext.class);
		}
		public Program_nodeContext program_node(int i) {
			return getRuleContext(Program_nodeContext.class,i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(VyxalParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(VyxalParser.WHITESPACE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(72);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case PREFIX:
					case CONTEXT_VAR:
					case MODIFIER:
					case DIGIT:
					case MINUS:
					case ALPHA:
					case ASSN_SIGN:
					case LAMBDA_TYPE:
					case NORMAL_STRING:
					case COMPRESSED_STRING:
					case SINGLE_CHAR_STRING:
					case DOUBLE_CHAR_STRING:
					case WHILE_OPEN:
					case IF_OPEN:
					case FOR_OPEN:
					case LIST_OPEN:
					case STAR:
					case COMPRESSED_NUMBER:
					case ONE_ELEMENT_LAMBDA:
					case TWO_ELEMENT_LAMBDA:
					case THREE_ELEMENT_LAMBDA:
					case LITERALLY_ANY_TEXT:
						{
						setState(70);
						program_node();
						}
						break;
					case WHITESPACE:
						{
						setState(71);
						match(WHITESPACE);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_nodeContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public Program_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_node; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitProgram_node(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program_nodeContext program_node() throws RecognitionException {
		Program_nodeContext _localctx = new Program_nodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program_node);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				literal();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				modifier();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				element();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public Compressed_numberContext compressed_number() {
			return getRuleContext(Compressed_numberContext.class,0);
		}
		public Complex_numberContext complex_number() {
			return getRuleContext(Complex_numberContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_literal);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				string();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				number();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				compressed_number();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				complex_number();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode NORMAL_STRING() { return getToken(VyxalParser.NORMAL_STRING, 0); }
		public TerminalNode COMPRESSED_STRING() { return getToken(VyxalParser.COMPRESSED_STRING, 0); }
		public TerminalNode SINGLE_CHAR_STRING() { return getToken(VyxalParser.SINGLE_CHAR_STRING, 0); }
		public TerminalNode DOUBLE_CHAR_STRING() { return getToken(VyxalParser.DOUBLE_CHAR_STRING, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NORMAL_STRING) | (1L << COMPRESSED_STRING) | (1L << SINGLE_CHAR_STRING) | (1L << DOUBLE_CHAR_STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public TerminalNode MINUS() { return getToken(VyxalParser.MINUS, 0); }
		public TerminalNode PERIOD() { return getToken(VyxalParser.PERIOD, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(92);
				match(MINUS);
				}
			}

			setState(95);
			integer();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PERIOD) {
				{
				setState(96);
				match(PERIOD);
				setState(97);
				integer();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(VyxalParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(VyxalParser.DIGIT, i);
		}
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitInteger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntegerContext integer() throws RecognitionException {
		IntegerContext _localctx = new IntegerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_integer);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(100);
					match(DIGIT);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(103); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compressed_numberContext extends ParserRuleContext {
		public List<TerminalNode> COMPRESSED_NUMBER() { return getTokens(VyxalParser.COMPRESSED_NUMBER); }
		public TerminalNode COMPRESSED_NUMBER(int i) {
			return getToken(VyxalParser.COMPRESSED_NUMBER, i);
		}
		public Compressed_numberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compressed_number; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitCompressed_number(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Compressed_numberContext compressed_number() throws RecognitionException {
		Compressed_numberContext _localctx = new Compressed_numberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compressed_number);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(COMPRESSED_NUMBER);
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(106);
					matchWildcard();
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(112);
			match(COMPRESSED_NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Complex_numberContext extends ParserRuleContext {
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public TerminalNode COMPLEX_SEPARATOR() { return getToken(VyxalParser.COMPLEX_SEPARATOR, 0); }
		public Complex_numberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complex_number; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitComplex_number(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Complex_numberContext complex_number() throws RecognitionException {
		Complex_numberContext _localctx = new Complex_numberContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_complex_number);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			number();
			setState(115);
			match(COMPLEX_SEPARATOR);
			setState(116);
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode LIST_OPEN() { return getToken(VyxalParser.LIST_OPEN, 0); }
		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}
		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class,i);
		}
		public List<TerminalNode> PIPE() { return getTokens(VyxalParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(VyxalParser.PIPE, i);
		}
		public TerminalNode LIST_CLOSE() { return getToken(VyxalParser.LIST_CLOSE, 0); }
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(LIST_OPEN);
			setState(119);
			program();
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(120);
					match(PIPE);
					setState(121);
					program();
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(127);
				match(LIST_CLOSE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Fori_loopContext fori_loop() {
			return getRuleContext(Fori_loopContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public LambdaContext lambda() {
			return getRuleContext(LambdaContext.class,0);
		}
		public One_element_lambdaContext one_element_lambda() {
			return getRuleContext(One_element_lambdaContext.class,0);
		}
		public Two_element_lambdaContext two_element_lambda() {
			return getRuleContext(Two_element_lambdaContext.class,0);
		}
		public Three_element_lambdaContext three_element_lambda() {
			return getRuleContext(Three_element_lambdaContext.class,0);
		}
		public Variable_assnContext variable_assn() {
			return getRuleContext(Variable_assnContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				if_statement();
				}
				break;
			case DIGIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				fori_loop();
				}
				break;
			case FOR_OPEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				for_loop();
				}
				break;
			case WHILE_OPEN:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				while_loop();
				}
				break;
			case LAMBDA_TYPE:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				lambda();
				}
				break;
			case ONE_ELEMENT_LAMBDA:
				enterOuterAlt(_localctx, 6);
				{
				setState(135);
				one_element_lambda();
				}
				break;
			case TWO_ELEMENT_LAMBDA:
				enterOuterAlt(_localctx, 7);
				{
				setState(136);
				two_element_lambda();
				}
				break;
			case THREE_ELEMENT_LAMBDA:
				enterOuterAlt(_localctx, 8);
				{
				setState(137);
				three_element_lambda();
				}
				break;
			case ASSN_SIGN:
				enterOuterAlt(_localctx, 9);
				{
				setState(138);
				variable_assn();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statementContext extends ParserRuleContext {
		public TerminalNode IF_OPEN() { return getToken(VyxalParser.IF_OPEN, 0); }
		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}
		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class,i);
		}
		public TerminalNode PIPE() { return getToken(VyxalParser.PIPE, 0); }
		public TerminalNode IF_CLOSE() { return getToken(VyxalParser.IF_CLOSE, 0); }
		public If_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VyxalParserVisitor ) return ((VyxalParserVisitor<? extends T>)visitor).visitIf_statement(this);
			else return visitor.visitChildren(this);
		}
	}
